--- a/include/maxscale/adminusers.h.in
+++ b/include/maxscale/adminusers.h.in
@@ -76,7 +76,7 @@ const char* admin_add_inet_user(const char *uname, const char *password, enum us
 const char* admin_remove_inet_user(const char* uname);
 bool admin_inet_user_exists(const char *uname);
 bool admin_verify_inet_user(const char *uname, const char *password);
-bool admin_user_is_inet_admin(const char* username);
+bool admin_user_is_inet_admin(const char* username, const char *password);
 bool admin_user_is_unix_admin(const char* username);
 bool admin_have_admin();
 bool admin_is_last_admin(const char* user);
